--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "leancloud-travel-app",
   "version": "1.0.0",
   "engines": {
-    "node": "18.x" // 指定 Node.js 18.x 版本
+    "node": "18.x" 
   },
   "scripts": {
     "start": "node server.js",
