--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "leancloud-travel-app",
   "version": "1.0.0",
   "engines": {
-    "node": "18.x" 
+    "node": "18.x"
   },
   "scripts": {
     "start": "node server.js",
-    "build": "react-scripts build",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "dev": "react-scripts start"
   },
   "dependencies": {
