--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "leancloud-travel-app",
+  "name": "react-score-app",
   "version": "1.0.0",
-  "engines": {
-    "node": "18.x"
-  },
+  "description": "A simple score system with React and LeanCloud",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
-    "dev": "react-scripts start"
+    "build": "react-scripts build",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "leanengine": "^3.0.0",
-    "express": "^4.17.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "express": "^4.18.2",
+    "leanengine": "^4.0.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
