--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "leanengine": "^4.0.0"
+    "leanengine": "^3.6.0",  // 使用有效的版本
+    "leancloud-storage": "^4.12.0",  // 添加 leancloud-storage
+    "ejs": "~2.5.7"  // 添加 ejs
   },
   "engines": {
     "node": "16.x"
